<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.com.sicredi.sicrediEventos.dadosDosEventos.DadosDoEventoView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/imagemEvento_imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/evento_comum"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/imagem_do_evento"
                app:layout_collapseParallaxMultiplier="0.7" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:title=""
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@color/fundo_cinza">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                app:cardBackgroundColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp">

                    <!-- Título -->
                    <TextView
                        android:id="@+id/titulo_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/t_tulo_do_evento"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginBottom="3dp"/>

                    <!-- Data -->
                    <TextView
                        android:id="@+id/data_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/data"
                        android:textColor="@color/texto_verde"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_marginBottom="3dp"/>

                    <!-- Preco -->
                    <TextView
                        android:id="@+id/preco_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/pre_o"
                        android:textColor="@color/texto_verde"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"/>

                    <!-- Descrição -->
                    <TextView
                        android:id="@+id/descricao_textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/descri_o"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:layout_marginBottom="15dp"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/checkIn_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginBottom="14dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/check_in"
                android:textColor="@color/white"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- FAB ver no Mapa -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/abrirNoMapa_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        app:backgroundTint="@color/white"
        app:tint="@null"
        android:src="@drawable/pin_map"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="28dp"
        android:contentDescription="@string/local_do_evento" />

    <!-- FAB compartilhar -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compartilhar_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        app:backgroundTint="@color/fab_cinza"
        app:tint="@null"
        android:src="@drawable/share"
        app:layout_anchor="@id/cardView"
        app:layout_anchorGravity="bottom|end|right"
        app:maxImageSize="28dp"
        android:contentDescription="@string/local_do_evento"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
